# actorsystem-cpp

./: .gitignore  CMakeLists.txt  README.md  actor.cpp  actor.hpp  amqp_consumer.cpp  amqp_consumer.hpp  amqp_helper.cpp  amqp_helper.hpp  conanfile.py  main.cpp  main.hpp
